--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Help</title>
 </head>
+
 <body>
-    
+    <div id="ap"></div>
+    <!-- client site application and user interface -->
+    <script src="app.js"></script>
+    <script src="ui.js"></script>
 </body>
+
 </html>
