--- a/public/index.html
+++ b/public/index.html
@@ -29,17 +29,18 @@
                 <form class="row gy-2 gx-3" role="search">
                     <div class="">
                         <label class="visually-hidden" for="geolocation">geolocation</label>
-                        <input type="hidden" class="form-control" id="geolocation" placeholder="geolocation">
+                        <input type="hidden" class="form-control" id="geolocation" v-model="requestModel.geolocation"
+                            required placeholder="geolocation">
                     </div>
                     <div class="col-auto">
                         <label class="visually-hidden" for="cityName">city</label>
-                        <select class="form-select" id="cityName" required>
+                        <select class="form-select" id="cityName" v-model="requestModel.cityName" required>
                             <option v-for="city in cities" :key="city._id" v-html="city.cityName"></option>
                         </select>
                     </div>
                     <div class="col-auto">
                         <label class="visually-hidden" for="typeOfNeed">typeOfNeed</label>
-                        <select class="form-select" id="typeOfNeed" required>
+                        <select class="form-select" id="typeOfNeed" v-model="requestModel.typeOfNeed" required>
                             <option v-for="need in needs" :key="need._id" v-html="need.kind"></option>
                         </select>
                     </div>
